Bug 47195 - Weborder: FF UI issue on Checkout: truncated all selection fields.

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -95,8 +95,9 @@ select::-ms-expand { /*Removes default IE style*/
 
 @-moz-document url-prefix() {
     /* due to firefox does not hide select element arrows need change padding */
-    select {
-        padding: 0 10px 0 6px !important;
+    .select-wrapper[class] select {
+        padding-top: 7px;
+        padding-bottom: 7px;
     }
 }
 
