--- a/skins/weborder/css/main.css
+++ b/skins/weborder/css/main.css
@@ -97,8 +97,9 @@ select:focus,
 
 @-moz-document url-prefix() {
     /* due to firefox does not hide select element arrows need change padding */
-    select {
-        padding: 0 10px 0 6px !important;
+    .select-wrapper[class] select {
+        padding-top: 7px;
+        padding-bottom: 7px;
     }
 }
 
